Revision from Aviles comments Removed finished TODO comments

--- a/Introduccion/Estrella.tex
+++ b/Introduccion/Estrella.tex
@@ -171,7 +171,7 @@ astro. Debido al transporte de energía en las capas interiores la fotósfera
 se encuentra a una temperatura a ordenes de magnitud menor que la temperatura en
 el núcleo; la intensidad monocromática de la estrella depende de esta
 temperatura, por lo cual la \textbf{distribución de energía espectral}
-(\textbf{SED} por sus siglas en inglés) varía de la misma forma. % TODO: reword?
+(\textbf{SED} por sus siglas en inglés) varía de la misma forma.
 
 Un \textbf{cuerpo negro} es aquel objeto que se encuentra en un estado de
 equilibrio termodinámico con su ambiente, absorbiendo energía (en el caso de una
