--- a/Introduccion/SistemasBinarios.tex
+++ b/Introduccion/SistemasBinarios.tex
@@ -1,5 +1,5 @@
 % \section{Sistemas Binarios}
-\chapter{Sistemas Binarios}
+\chapter{Sistemas Binarios} \label{capituloSistemasBinarios}
 
 La gran mayoría de sistemas estelares dentro de nuestra Galaxia no son aquellos
 solitarios como nuestro propio sistema solar, si no que son compuestas de dos o
@@ -341,7 +341,6 @@ astrofísico debe de cumplir con las siguientes condiciones:
 
 \subsection{Generalización a Órbitas Excéntricas y Asincrónicas}
 
-% TODO: porqué no se puede modelar 
 Una desventaja del modelo de Roche presentado en la \refequation{ecuacionRoche}
 yace en sus suposiciones principales; como consecuencia de estas, el potencial
 $\Omega$ definido hasta ahora solo puede ser aplicado a aquellos sistemas
