--- a/ref.bib
+++ b/ref.bib
@@ -32,7 +32,7 @@
 	url = {http://arxiv.org/abs/1606.03464},
 	doi = {10.48550/arXiv.1606.03464},
 	shorttitle = {{ROTSE}1 J164341.65+251748.1},
-	abstract = {{ROTSE}1 J164341.65+251748.1 was photometrically observed in the V band during three epochs with the 0.84-m telescope of the San Pedro M{\textbackslash}'artir Observatory in Mexico. Based on additional {BVR} photometry, we find that the primary star has a spectral type around G0V. The light curve of the system is typical of a W{\textasciitilde}{UMa} type binary stars and has an orbital period of \${\textbackslash}sim\$ 0.323 days. In an effort to gain a better understanding of the binary system and determine its physical properties, we analyzed the light curve with the Wilson and Devinney method. We found that {ROTSE}1 J164341.65+251748.1 has a mass ratio of \${\textbackslash}sim\$ 0.34 and that the less massive component is over 230 K hotter than the primary star. The inclination of the system is \${\textbackslash}sim\$ 84.6 degrees, and the \{{\textbackslash}bf degree\} of over-contact is 11{\textbackslash}\%. The analysis shows the presence of variable bright spots on the primary star.},
+	abstract = {{ROTSE}1 J164341.65+251748.1 was photometrically observed in the V band during three epochs with the 0.84-m telescope of the San Pedro Mártir Observatory in Mexico. Based on additional {BVR} photometry, we find that the primary star has a spectral type around G0V. The light curve of the system is typical of a W-UMa type binary stars and has an orbital period of ~0.323 days. In an effort to gain a better understanding of the binary system and determine its physical properties, we analyzed the light curve with the Wilson and Devinney method. We found that {ROTSE}1 J164341.65+251748.1 has a mass ratio of ~0.34 and that the less massive component is over 230 K hotter than the primary star. The inclination of the system is ~84.6 degrees, and the degree of over-contact is 11\%. The analysis shows the presence of variable bright spots on the primary star.},
 	number = {{arXiv}:1606.03464},
 	publisher = {{arXiv}},
 	author = {Michel, R. and Echevarria, J. and Cang, T. and Fox-Machado, L. and Gonzalez-Buitrago, D.},
@@ -58,7 +58,7 @@
 @thesis{ibanez_cvs_wide_field_surveys_2021,
 	title = {Cataclysmic Variables in Wide Field Surveys},
 	url = {https://ui.adsabs.harvard.edu/abs/2021PhDT.........5I},
-	abstract = {Las Variables Cataclísmicas ({CV} por sus siglas en inglés) son sistemas binarios que interactúan entre sí, compuestos por una enana blanca y una estrella secundaria, típicamente una enana roja. La secundaria transfiere material através del punto interno de Lagrange y suele formar un disco de acreción que rodea a la enana blanca.La evolución de las {CVs} está impulsada por la pérdida de momento angular, pasando de períodos orbitales largos a períodos orbitales cortos. Su evolución prosigue de esta manera hasta alcanzar el período mínimo a {\textasciitilde}78min. Además, hay un descenso abrupto en el número de sistemas con períodos entre 2h y 3h, el ¿period gap¿. Por debajo del gap, el principal mecanismo de pérdida de momento angular se rige por la radiación gravitatoria, mientras que por encima de él, domina el frenado magnético. No obstante, existen discrepancias entre teoría y observaciones y se hace necesario contar con una población más amplia y conocida de {CVs} para resolverlas. En esta tesis se ha realizado un análisis de las magnitudes absolutas de las {CVs} para dar continuidad a la comprensión de la evolución de estos sistemas. Posteriormente, se presentan varias metodologías para encontrar nuevos sistemas, utilizando una combinación de varios cartografíados de gran campo.},
+	abstract = {Las Variables Cataclísmicas ({CV} por sus siglas en inglés) son sistemas binarios que interactúan entre sí, compuestos por una enana blanca y una estrella secundaria, típicamente una enana roja. La secundaria transfiere material através del punto interno de Lagrange y suele formar un disco de acreción que rodea a la enana blanca.La evolución de las {CVs} está impulsada por la pérdida de momento angular, pasando de períodos orbitales largos a períodos orbitales cortos. Su evolución prosigue de esta manera hasta alcanzar el período mínimo a ~78min. Además, hay un descenso abrupto en el número de sistemas con períodos entre 2h y 3h, el ¿period gap¿. Por debajo del gap, el principal mecanismo de pérdida de momento angular se rige por la radiación gravitatoria, mientras que por encima de él, domina el frenado magnético. No obstante, existen discrepancias entre teoría y observaciones y se hace necesario contar con una población más amplia y conocida de {CVs} para resolverlas. En esta tesis se ha realizado un análisis de las magnitudes absolutas de las {CVs} para dar continuidad a la comprensión de la evolución de estos sistemas. Posteriormente, se presentan varias metodologías para encontrar nuevos sistemas, utilizando una combinación de varios cartografíados de gran campo.},
 	type = {phdthesis},
 	author = {Ibáñez, Javier Abril},
 	urldate = {2024-04-04},
@@ -300,62 +300,24 @@ ADS Bibcode: 1959cbs..book.....K},
 	keywords = {compact binaries, evolution of stars, single and binary stars, star cluster dynamics, star formation, stellar birth, stellar evolution, stellar evolution explained, undergraduate text}
 }
 
-@ARTICLE{astropy,
-   author = {The Astropy Collaboration and Price-Whelan, A.~M. and Sip\\H ocz, B.~M. and
-	G\"unther, H.~M. and Lim, P.~L. and Crawford, S.~M. and
-	Conseil, S. and Shupe, D.~L. and Craig, M.~W. and Dencheva, N. and
-	Ginsburg, A. and VanderPlas, J.~T. and Bradley, L.~D. and
-	Pérez-Suárez, D. and de Val-Borro, M. and Paper Contributors, (. and
-	Aldcroft, T.~L. and Cruz, K.~L. and Robitaille, T.~P. and
-	Tollerud, E.~J. and Coordination Committee, (. and Ardelean, C. and
-	Babej, T. and Bach, Y.~P. and Bachetti, M. and Bakanov, A.~V. and
-	Bamford, S.~P. and Barentsen, G. and Barmby, P. and Baumbach, A. and
-	Berry, K.~L. and Biscani, F. and Boquien, M. and Bostroem, K.~A. and
-	Bouma, L.~G. and Brammer, G.~B. and Bray, E.~M. and Breytenbach, H. and
-	Buddelmeijer, H. and Burke, D.~J. and Calderone, G. and
-	Cano Rodríguez, J.~L. and Cara, M. and Cardoso, J.~V.~M. and
-	Cheedella, S. and Copin, Y. and Corrales, L. and Crichton, D. and
-	D\\rsquoAvella, D. and Deil, C. and Depagne, \\\'E. and
-	Dietrich, J.~P. and Donath, A. and Droettboom, M. and
-	Earl, N. and Erben, T. and Fabbro, S. and Ferreira, L.~A. and
-	Finethy, T. and Fox, R.~T. and Garrison, L.~H. and Gibbons, S.~L.~J. and
-	Goldstein, D.~A. and Gommers, R. and Greco, J.~P. and
-	Greenfield, P. and Groener, A.~M. and Grollier, F. and
-	Hagen, A. and Hirst, P. and Homeier, D. and Horton, A.~J. and
-	Hosseinzadeh, G. and Hu, L. and Hunkeler, J.~S. and Ivezi\\\'c, \\v Z. and
-	Jain, A. and Jenness, T. and Kanarek, G. and Kendrew, S. and
-	Kern, N.~S. and Kerzendorf, W.~E. and Khvalko, A. and
-	King, J. and Kirkby, D. and Kulkarni, A.~M. and Kumar, A. and
-	Lee, A. and Lenz, D. and Littlefair, S.~P. and Ma, Z. and
-	Macleod, D.~M. and Mastropietro, M. and McCully, C. and
-	Montagnac, S. and Morris, B.~M. and Mueller, M. and Mumford, S.~J. and
-	Muna, D. and Murphy, N.~A. and Nelson, S. and Nguyen, G.~H. and
-	Ninan, J.~P. and N\"othe, M. and Ogaz, S. and Oh, S. and
-	Parejko, J.~K. and Parley, N. and Pascual, S. and Patil, R. and
-	Patil, A.~A. and Plunkett, A.~L. and Prochaska, J.~X. and
-	Rastogi, T. and Reddy Janga, V. and Sabater, J. and Sakurikar, P. and
-	Seifert, M. and Sherbert, L.~E. and Sherwood-Taylor, H. and
-	Shih, A.~Y. and Sick, J. and Silbiger, M.~T. and Singanamalla, S. and
-	Singer, L.~P. and Sladen, P.~H. and Sooley, K.~A. and
-	Sornarajah, S. and Streicher, O. and Teuben, P. and Thomas, S.~W. and
-	Tremblay, G.~R. and Turner, J.~E.~H. and Terr\\\'on, V. and
-	van Kerkwijk, M.~H. and de la Vega, A. and Watkins, L.~L. and
-	Weaver, B.~A. and Whitmore, J.~B. and Woillez, J. and
-	Zabalza, V. and Contributors},
-  title = {The Astropy Project: Building an Open-science Project and Status of the v2.0 Core Package},
-  journal = {\\aj},
-  archivePrefix = "arXiv",
-  eprint = {1801.02634},
-  primaryClass = "astro-ph.IM",
-  keywords = {methods: data analysis, methods: miscellaneous, methods: statistical, reference systems },
-  year = 2018,
-  month = sep,
-  volume = 156,
-  eid = {123},
-  pages = {123},
-  doi = {10.3847/1538-3881/aabc4f},
-  adsurl = {https://ui.adsabs.harvard.edu/abs/2018AJ....156..123T},
-  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+@article{astropy,
+	title = {The Astropy Project: Building an Open-science Project and Status of the v2.0 Core Package*},
+	volume = {156},
+	issn = {1538-3881},
+	url = {https://dx.doi.org/10.3847/1538-3881/aabc4f},
+	doi = {10.3847/1538-3881/aabc4f},
+	shorttitle = {The Astropy Project},
+	abstract = {The Astropy Project supports and fosters the development of open-source and openly developed Python packages that provide commonly needed functionality to the astronomical community. A key element of the Astropy Project is the core package astropy, which serves as the foundation for more specialized projects and packages. In this article, we provide an overview of the organization of the Astropy project and summarize key features in the core package, as of the recent major release, version 2.0. We then describe the project infrastructure designed to facilitate and support development for a broader ecosystem of interoperable packages. We conclude with a future outlook of planned new features and directions for the broader Astropy Project.},
+	pages = {123},
+	number = {3},
+	journaltitle = {The Astronomical Journal},
+	shortjournal = {{AJ}},
+	author = {Collaboration, The Astropy and Price-Whelan, A. M. and Sipőcz, B. M. and Günther, H. M. and Lim, P. L. and Crawford, S. M. and Conseil, S. and Shupe, D. L. and Craig, M. W. and Dencheva, N. and Ginsburg, A. and {VanderPlas}, J. T. and Bradley, L. D. and Pérez-Suárez, D. and Val-Borro, M. de and Contributors), (Primary Paper and Aldcroft, T. L. and Cruz, K. L. and Robitaille, T. P. and Tollerud, E. J. and Committee), (Astropy Coordination and Ardelean, C. and Babej, T. and Bach, Y. P. and Bachetti, M. and Bakanov, A. V. and Bamford, S. P. and Barentsen, G. and Barmby, P. and Baumbach, A. and Berry, K. L. and Biscani, F. and Boquien, M. and Bostroem, K. A. and Bouma, L. G. and Brammer, G. B. and Bray, E. M. and Breytenbach, H. and Buddelmeijer, H. and Burke, D. J. and Calderone, G. and Rodríguez, J. L. Cano and Cara, M. and Cardoso, J. V. M. and Cheedella, S. and Copin, Y. and Corrales, L. and Crichton, D. and D’Avella, D. and Deil, C. and Depagne, É and Dietrich, J. P. and Donath, A. and Droettboom, M. and Earl, N. and Erben, T. and Fabbro, S. and Ferreira, L. A. and Finethy, T. and Fox, R. T. and Garrison, L. H. and Gibbons, S. L. J. and Goldstein, D. A. and Gommers, R. and Greco, J. P. and Greenfield, P. and Groener, A. M. and Grollier, F. and Hagen, A. and Hirst, P. and Homeier, D. and Horton, A. J. and Hosseinzadeh, G. and Hu, L. and Hunkeler, J. S. and Ivezić, Ž and Jain, A. and Jenness, T. and Kanarek, G. and Kendrew, S. and Kern, N. S. and Kerzendorf, W. E. and Khvalko, A. and King, J. and Kirkby, D. and Kulkarni, A. M. and Kumar, A. and Lee, A. and Lenz, D. and Littlefair, S. P. and Ma, Z. and Macleod, D. M. and Mastropietro, M. and {McCully}, C. and Montagnac, S. and Morris, B. M. and Mueller, M. and Mumford, S. J. and Muna, D. and Murphy, N. A. and Nelson, S. and Nguyen, G. H. and Ninan, J. P. and Nöthe, M. and Ogaz, S. and Oh, S. and Parejko, J. K. and Parley, N. and Pascual, S. and Patil, R. and Patil, A. A. and Plunkett, A. L. and Prochaska, J. X. and Rastogi, T. and Janga, V. Reddy and Sabater, J. and Sakurikar, P. and Seifert, M. and Sherbert, L. E. and Sherwood-Taylor, H. and Shih, A. Y. and Sick, J. and Silbiger, M. T. and Singanamalla, S. and Singer, L. P. and Sladen, P. H. and Sooley, K. A. and Sornarajah, S. and Streicher, O. and Teuben, P. and Thomas, S. W. and Tremblay, G. R. and Turner, J. E. H. and Terrón, V. and Kerkwijk, M. H. van and Vega, A. de la and Watkins, L. L. and Weaver, B. A. and Whitmore, J. B. and Woillez, J. and Zabalza, V. and Contributors), (Astropy},
+	urldate = {2024-06-26},
+	date = {2018-08},
+	langid = {english},
+	note = {Publisher: The American Astronomical Society},
+	file = {IOP Full Text PDF:/home/ramon/Zotero/storage/BMKI8EHY/Collaboration et al. - 2018 - The Astropy Project Building an Open-science Proj.pdf:application/pdf},
 }
 
 @article{astroplan,
